--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,14 +36,16 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-day-picker": "^9.11.1",
+    "react-day-picker": "^9.4.3",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
+    "react-is": "^19.2.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.3.0",
