--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,14 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "jest --runInBand",
-    "test:watch": "jest --watch",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest tests/unit",
+    "test:unit:watch": "NODE_OPTIONS=--experimental-vm-modules jest tests/unit --watch",
+    "test:unit:coverage": "NODE_OPTIONS=--experimental-vm-modules jest tests/unit --coverage",
+    "test:unit:verbose": "NODE_OPTIONS=--experimental-vm-modules jest tests/unit --verbose",
+    "test:service": "NODE_OPTIONS=--experimental-vm-modules jest tests/unit/services",
+    "test:clear": "jest --clearCache"
   },
   "keywords": [],
   "author": "",
@@ -26,9 +31,15 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
+    "@faker-js/faker": "^10.1.0",
     "@jest/test-sequencer": "^29.7.0",
+    "@types/jest": "^30.0.0",
     "babel-jest": "^29.7.0",
+    "dotenv-cli": "^11.0.0",
+    "faker": "^5.5.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.10"
+    "jest-extended": "^7.0.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
